Removed lines and fixed name spacing

--- a/Social Proof Section/styles.css
+++ b/Social Proof Section/styles.css
@@ -41,7 +41,7 @@ body {
 
 .mainContainer {
     position: relative;
-    border: solid red 1px;
+    /* border: solid red 1px; */
     margin: auto;
     max-width: 1110px;
     min-width: 1000px;
@@ -51,7 +51,7 @@ body {
 /* Top Section */
 
 .upperContainer {
-    border: solid blue 1px;
+    /* border: solid blue 1px; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
@@ -60,7 +60,7 @@ body {
 }
 
 .column {
-    border: solid pink 1px;
+    /* border: solid pink 1px; */
     align-items:flex-start;
     justify-content: flex-start;
     height: 100%;
@@ -137,7 +137,7 @@ body {
 /* Bottom Section */
 
 .lowerContainer {
-    border: solid black 1px;
+    /* border: solid black 1px; */
     height: 266px;
     width: 100%;
     display: flex;
@@ -145,7 +145,7 @@ body {
 }
 
 .verifiedPerson {
-    border: solid red 1px;
+    /* border: solid red 1px; */
     width: 31%;
     height: 234px;
     background: #512051;
@@ -169,7 +169,7 @@ body {
 }
 
 .personInfo {
-    border: orange solid 1px;
+    /* border: orange solid 1px; */
     width: 200px;
     height: 40px;
     padding: 0px;
@@ -185,7 +185,7 @@ body {
 .nameStatus {
     position: relative;
     top:-10px;
-    border: green solid 1px;
+    /* border: green solid 1px; */
     width: 130px;
     height: 34px;
     
@@ -202,7 +202,7 @@ body {
 
 .personStatus {
     font-weight: 400;
-    margin: 0px;
+    margin-top: 5px;
     color: rgba(238,105,164,1);
 }
 
@@ -219,7 +219,7 @@ body {
     body {
         padding: 50px 50px;
     }
-    
+
     .mainContainer {
         min-width: 327px;
         max-width: 327px;
@@ -227,7 +227,7 @@ body {
     }
 
     .upperContainer {
-        border: solid blue 1px;
+        /* border: solid blue 1px; */
         display: grid;
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr;
@@ -297,7 +297,7 @@ body {
     }
 
     .lowerContainer {
-        border: solid black 1px;
+        /* border: solid black 1px; */
         height: 744px;
         width: 100%;
         display: flex;
@@ -306,7 +306,7 @@ body {
     }
 
     .verifiedPerson {
-        border: solid red 1px;
+        /* border: solid red 1px; */
         width: 100%;
         height: 234px;
     }
